# hello_rust

./: .gitattributes  .rubocop.yml  Gemfile  README.md  Rakefile  hello_rust.gemspec
ext/hello_rust/: Cargo.toml
ext/hello_rust/src/: lib.rs
lib/: hello_rust.rb
spec/: hello_rust_spec.rb
spec/fixtures/: organizations_med.csv  organizations_small.csv
