[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"
authors = ["David Marchante <davidmarchan@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.1"
magnus = { version = "0.5" }
polars = { version = "0.27.2", features = ["lazy"] }
serde = { version = "1.0.152", features = ["derive"] }
