[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"
authors = ["David Marchante <davidmarchan@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
magnus = { version = "0.6" }
polars = { version = "0.35", features = ["lazy"] }
serde = { version = "1", features = ["derive"] }
